--- a/CleanZcare/src/main/resources/application.properties
+++ b/CleanZcare/src/main/resources/application.properties
@@ -33,9 +33,9 @@
 server.port=8081
 
 # DB Config
-spring.datasource.url=jdbc:mysql://localhost:3306/cleanzcaredb?createDatabaseIfNotExist=true&amp;useSSL=false&amp;allowPublicKeyRetrieval=true
-spring.datasource.username=D4_89428_Sharayu
-spring.datasource.password=manager
+spring.datasource.url=jdbc:mysql://localhost:3306/cleanzcare?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
