--- a/CleanZcare/src/main/resources/application.properties
+++ b/CleanZcare/src/main/resources/application.properties
@@ -1,41 +1,11 @@
-#spring.application.name=demo
-##DB config
-#spring.datasource.url=jdbc:mysql://localhost:3306/cleanzcare?createDatabaseIfNotExist=true&amp;useSSL=false&amp;allowPublicKeyRetrieval=true
-#spring.datasource.username=D4_89428_Sharayu
-#spring.datasource.password=manager
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.open-in-view=false
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-##default server port 8080
-##server.port=9090
-#
-#
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#
-#springdoc.api-docs.path=/v3/api-docs
-#springdoc.swagger-ui.path=/swagger-ui.html
-#
-## JWT secret
-#jwt.secret=cleanzcaresecret
-#jwt.expiration=3600000
-
-
-
-
-
-
-
-
-
 # SERVER
 server.port=8081
 
 # DB Config
-spring.datasource.url=jdbc:mysql://localhost:3306/cleanzcare?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/cleanzcare?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=D4_89368_Yashashree
+spring.datasource.password=manager
+
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
