--- a/CleanZcare/src/main/resources/application.properties
+++ b/CleanZcare/src/main/resources/application.properties
@@ -30,7 +30,7 @@
 
 
 # SERVER
-server.port=8081
+#server.port=8081
 
 # DB Config
 spring.datasource.url=jdbc:mysql://localhost:3306/cleanzcaredb?createDatabaseIfNotExist=true&amp;useSSL=false&amp;allowPublicKeyRetrieval=true
