add othere functionality except user/serviceProvider/customer

--- a/HomeCleaningService/src/main/resources/application.properties
+++ b/HomeCleaningService/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.main.allow-circular-references=true
+
+razorpay.key_id=rzp_test_sW1clMdYhkU0nx
+razorpay.key_secret=kQ3zRGOSNGKjra81W0RVNna6
