--- a/HomeCleaningService/pom.xml
+++ b/HomeCleaningService/pom.xml
@@ -30,6 +30,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+	<dependency>
+    <groupId>com.razorpay</groupId>
+    <artifactId>razorpay-java</artifactId>
+    <version>1.4.3</version>  <!-- check latest version -->
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -59,8 +64,9 @@
         <groupId>com.cloudinary</groupId>
         <artifactId>cloudinary-http5</artifactId>
         <version>2.0.0</version>
+        
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
 <dependency>
     <groupId>org.modelmapper</groupId>
     <artifactId>modelmapper</artifactId>
