--- a/HomeCleaningService/src/main/resources/application.properties
+++ b/HomeCleaningService/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.main.allow-circular-references=true
 
-razorpay.key_id=rzp_test_sW1clMdYhkU0nx
-razorpay.key_secret=kQ3zRGOSNGKjra81W0RVNna6
+razorpay.key_id= add your api key
+razorpay.key_secret= add your secret
